This is version two! Which contains a message in the heading that tells you that it is a new version!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>This is a test page for github!</h1>
+        <h1>This is a test page for github! This is also a new version (Version 2)</h1>
     </body>
-
+    
 </html>
