--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html>
 
-    <head>
-        <p>TESTPAGE</p>
-    </head>
+    <title>
+        TESTPAGE
+    </title>
 
     <body>
         <h1>This is a test page for github! This is also a new version (Version 2)</h1>
